Fixed bug #29268 (__autoload() not called with Reflection->getClass())